human-intervention-logs/io.projectreactor.tools:blockhound:1.0.8.RELEASE/gradle-test/gradle-test-2026-06-10T12-23-31-751161Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.projectreactor.tools:blockhound:1.0.8.RELEASE
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 24 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ByteBuddyAgentInnerProcessProviderInnerForCurrentVmInnerForLegacyVmTest.java:10: error: ForLegacyVm has protected access in ForCurrentVm
import reactor.blockhound.shaded.net.bytebuddy.agent.ByteBuddyAgent.ProcessProvider.ForCurrentVm.ForLegacyVm;
                                                                                                ^
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ByteBuddyAgentInnerProcessProviderInnerForCurrentVmInnerForLegacyVmTest.java:17: error: package ForLegacyVm does not exist
        String processId = ForLegacyVm.INSTANCE.resolve();
                                      ^
2 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ByteBuddyAgentInnerProcessProviderInnerForCurrentVmInnerForLegacyVmTest.java:10: error: ForLegacyVm has protected access in ForCurrentVm
  import reactor.blockhound.shaded.net.bytebuddy.agent.ByteBuddyAgent.ProcessProvider.ForCurrentVm.ForLegacyVm;
                                                                                                  ^
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/tests/src/io.projectreactor.tools/blockhound/1.0.8.RELEASE/src/test/java/io_projectreactor_tools/blockhound/ByteBuddyAgentInnerProcessProviderInnerForCurrentVmInnerForLegacyVmTest.java:17: error: package ForLegacyVm does not exist
          String processId = ForLegacyVm.INSTANCE.resolve();
                                        ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4784-f4e48da3/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.projectreactor.tools:blockhound:1.0.8.RELEASE failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
